<resources>
    <string name="app_name">CalculatorApp</string>

    <string name="int_button_zero">0</string>
    <string name="int_button_comma">,</string>
    <string name="int_button_equally">=</string>
    <string name="int_button_one">1</string>
    <string name="int_button_two">2</string>
    <string name="int_button_three">3</string>
    <string name="int_button_four">4</string>
    <string name="int_button_five">5</string>
    <string name="int_button_six">6</string>
    <string name="int_button_seven">7</string>
    <string name="int_button_eight">8</string>
    <string name="int_button_nine">9</string>
    <string name="int_button_plus">+</string>
    <string name="int_button_minus">-</string>
    <string name="int_button_multiply">*</string>
    <string name="int_button_share">/</string>
    <string name="int_button_clear">C</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_string">История</string>
    <string name="clear_string">Очистить</string>


</resources>