<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_zero"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_comma"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_comma"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_equally"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line_light_grey"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_one"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_two"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_comma"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_three"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintEnd_toStartOf="@id/line_light_grey"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_six"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_four"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_five"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_six"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintEnd_toStartOf="@id/line_light_grey"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_seven"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_eight"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_nine"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/line_light_grey"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_plus"
        android:textColor="@color/light_blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/line_light_grey"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_minus"
        android:textColor="@color/light_blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/line_light_grey"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_multiply"
        android:textColor="@color/light_blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/line_light_grey"
        app:layout_constraintTop_toBottomOf="@id/button_share"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_share"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/line_light_grey"
        app:layout_constraintTop_toBottomOf="@id/button_clear"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:text="@string/int_button_clear"
        android:textColor="@color/light_blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@id/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/line_light_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <View
        android:id="@+id/line_light_grey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:layout_constraintHorizontal_weight="0.03"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>